--- a/browser/render/layouts/list-and-detail/snippet-list/snippet-list.sass
+++ b/browser/render/layouts/list-and-detail/snippet-list/snippet-list.sass
@@ -5,8 +5,3 @@
   text-overflow: ellipsis
   cursor: pointer
   display: inline-block
-  &::-webkit-scrollbar
-    width: 12px
-
-  &::-webkit-scrollbar-thumb
-    background-color: rgba(0, 0, 0, 0.5)
